--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@ ol {
 	top: 0;
 	height: 100%;
 	width: 800px;
-	background: #0190a8;
+	background: #157987;
 	content: "";
 	z-index: -1;
 	-webkit-transform: skewX(-30deg);
